# minecraft-launcher

./: .eslintrc.json  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: build_sidecar.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: install.py  run.py  test.py
src-tauri/src/: install.rs  main.rs  run.rs  store.rs  utils.rs
src/components/: BetaAlert.tsx  Home.tsx  Icons.tsx  InstallProgress.tsx  Launch.tsx  Modals.tsx  SideBar.tsx  SideMenu.tsx  UserBadge.tsx  VersionSelect.tsx
src/components/modals/: Install.tsx  Settings.tsx  Users.tsx
src/components/ui/: Badge.tsx  Input.tsx  Modal.tsx  Select.tsx
src/lib/: func.ts  mine.ts  modals.ts  storage.ts  user.ts
src/types/: index.d.ts
