[package]
name = "minecraft-launcher"
version = "0.0.0"
description = "A Minecraft launcher"
authors = ["LipezJ"]
license = ""
repository = "https://github.com/LipezJ/minecraft-launcher"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "api-all", "process-command-api" ] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
uuid = { version = "1.7.0", features = ["v4"] }
serde_json = "1.0"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
